# gir.core

src/Libs/Regress-1.0/: Regress-1.0.csproj
src/Native/: meson.build
src/Native/RegressLib/: meson.build
